# Physiscs_projects

./: .gitignore  README.md
GammaAtenuation/: .gitignore  CMakeLists.txt  CMakelist.txt  README.md
GammaAtenuation/analysis/: README.md  analyze_attenuation.C  multi_analysis.C  quick.C  setup_multi.C  thickness_study.C  water_histogram.C
GammaAtenuation/include/: DetectorConstruction.hh  EventAction.hh  MiHit.hh  MiSensitiveDetector.hh  PhysicsList.hh  RunAction.hh
GammaAtenuation/mac/: init.mac
GammaAtenuation/results/: attenuation_data.csv  event_data.csv  results_summary.txt
GammaAtenuation/scripts/: analyze_attenuation.C  run_batch.sh  run_multi_energy.sh  run_thickness_study.sh
GammaAtenuation/src/: DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  MiHit.cc  MiSensitiveDetector.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  main.cc
